Fix link padding on mobile/tablet

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -10,8 +10,8 @@
   transition-property: color, background-color;
   transition-duration: 200ms;
   transition-timing-function: ease;
-  margin-inline: -12px -6px;
-  padding-inline: 12px 4px;
+  margin-inline: -6px;
+  padding-inline: 6px 4px;
   box-decoration-break: clone;
 
   @include util.hover {
@@ -19,6 +19,11 @@
     background-color: color.$accent-secondary-contrast;
     color: color.$accent-secondary;
     transition-duration: 400ms;
+  }
+
+  @include util.mw-md {
+    margin-inline: -12px -6px;
+    padding-inline: 12px 4px;
   }
 }
 
